--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a{
 :root{
     --main-color: rgba(211, 207, 207, 0.9);
     --bg-header-primary: #ffffff;
-    --bg-header-secondary: #3d3838;
+    --bg-header-secondary: rgba(0,0,0,0.3);
 }
 header, main, footer{
     max-width: 90rem;
@@ -73,7 +73,7 @@ main nav h2, main section h2{
     background-color: var(--bg-header-primary);
     box-shadow: 0 .4rem 0 var(--bg-header-secondary);
     text-transform: capitalize;
-    color: #ccc;
+    color: rgb(206, 205, 205);
     text-shadow: .2rem .2rem 0 rgb(82, 81, 81);
     font-size: xx-large;
 }
